--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "node app.js"
   },
   "dependencies: {
-  "discord.js": "^11.3.2",
-  "request": "2.81.0"
+  "discord.js": "^11.3.2"
   }
 }
