--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js"
   },
-  "dependencies: {
-  "discord.js": "^11.3.2"
-  }
+ "dependencies": {
+    "discord.js": "^11.3.2"
+   }
 }
