--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "start": "node app.js"
   },
- "dependencies": {
+  "dependencies": {
     "chalk": "^1.1.3",
     "discord-eco": "0.0.10",
     "discord.js": "^11.3.2",
+    "figlet": "^1.2.0",
     "fs": "0.0.1-security",
     "got": "^8.3.0",
+    "math-expression-evaluator": "^1.2.17",
     "moment": "^2.20.1",
     "ms": "^0.7.3",
     "parse-ms": "^1.0.1",
     "profanities": "^2.6.0",
+    "quick.db": "^5.3.6",
     "quick.log": "^1.2.1",
     "snekfetch": "^3.6.4",
     "weather-js": "^2.0.0"
